<resources>
    <string name="app_name">Lab 1</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_textview">Login</string>
    <string name="login_hint">login name</string>
    <string name="password_hint">password</string>
    <string name="password_textview">Password</string>
    <string name="login_button">Login</string>
    <string name="button1_text">Button 1</string>
    <string name="button2_text">Button 2</string>
    <string name="switch_text">Enable Something</string>
    <string name="content_desc">I\'m the ImageView.</string>
    <string name="preference_key">email</string>
    <string name="default_preference_key">DefaultEmail</string>
    <string name="ok">Yes</string>
    <string name="cancel">No</string>
    <string name="dialog_title">Exit Confirm</string>
    <string name="dialog_message">Exit button is pressed. Do you want to really exit? </string>
    <string name="sw_on">Switch is On</string>
    <string name="sw_off">Switch is Off</string>
    <string name="shared_message">My information to share</string>
    <string name="take_message">ListItemsActivity passed: </string>
    <string name="start_chat_text">Start Chat</string>
    <string name="send_button_text">Send</string>
    <string name="start_chat">Start Chat</string>
    <string name="send_button">Send</string>
    <string name="weatherButtonText">Weather Forecast</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="toolbarButtonText">Test Toolbar</string>
    <string name="about_message">Version 1.0, by ByungSeon Kim</string>
    <string name="alert_title">Do you want to go back?</string>
    <string name="new_message">New Message</string>
    <string name="change_message">Change Message</string>
    <string name="back">Back</string>
    <string name="celsius">\u00B0C</string>
    <string name="low_temperatre">Low: </string>
    <string name="high_temperatre">High: </string>
    <string name="weather_text">Weather</string>
    <string name="title_message_list">Messages</string>
    <string name="title_message_detail">Message Detail</string>
    <string name="detailed_message">Detailed message</string>
    <string name="toolbar_text">Test Toolbar</string>
    <string name="title_activity_kkkkk">kkkkk</string>
</resources>
