<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:baselineAligned="false">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/margin_8dp"
            android:paddingTop="@dimen/margin_8dp"
            android:text="Ottawa, CA"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_big" />

        <ImageView
            android:id="@+id/weather_icon"
            android:layout_width="@dimen/weather_icon_width"
            android:layout_height="@dimen/weather_icon_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="16dp"
            android:contentDescription="Weather Image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text=""
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_very_big" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/celsius"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_very_big"
                android:paddingStart="@dimen/margin_8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/low_temperatre"
                android:textSize="@dimen/text_size_small"
                android:gravity="top" />

            <TextView
                android:id="@+id/temperature_low"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text=""
                android:textSize="@dimen/text_size_small"
                android:gravity="top" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/celsius"
                android:textSize="@dimen/text_size_small"
                android:gravity="top" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/middle_margin"
                android:text="@string/high_temperatre"
                android:textSize="@dimen/text_size_small"
                android:gravity="top" />

            <TextView
                android:id="@+id/temperature_high"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text=""
                android:textSize="@dimen/text_size_small"
                android:gravity="top" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/celsius"
                android:textSize="@dimen/text_size_small"
                android:gravity="top" />

        </LinearLayout>

        <ProgressBar
            style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/progressBar"
            android:paddingTop="20dp"
            android:visibility="invisible" />
    </LinearLayout>

</LinearLayout>

